OLS-1119: Update banner from dev preview to technology preview for Lightspeed content

--- a/_templates/_page_openshift.html.erb
+++ b/_templates/_page_openshift.html.erb
@@ -70,7 +70,7 @@
       <% if (distro_key == "openshift-lightspeed") %>
       <span>
         <div class="alert alert-danger" role="alert" id="support-alert">
-          <strong>OpenShift Lightspeed is a Developer Preview release. Developer Preview features are not supported by Red Hat in any way and are not functionally complete or production-ready. Do not use Developer Preview features for production or business-critical workloads. Developer Preview features provide early access to upcoming product features in advance of their possible inclusion in a Red Hat product offering, enabling customers to test functionality and provide feedback during the development process. These features might not have any documentation, are subject to change or removal at any time, and testing is limited. Red Hat might provide ways to submit feedback on Developer Preview features without an associated SLA. This documentation is a work in progress and might not be complete or fully tested.</strong></a>.
+          <strong>OpenShift Lightspeed is a Technology Preview release. Technology Preview features are not supported with Red Hat production service level agreements (SLAs) and might not be functionally complete. Red Hat does not recommend using them in production. These features provide early access to upcoming product features, enabling customers to test functionality and provide feedback during the development process.</strong></a>.
         </div>
       </span>
       <% end %>
